# blog

./: .env.example  .gitignore  CLAUDE.md  README.md  claude project setup.md  extract_pdf.py  generator.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agents/: 00-orchestrator.md  01-strategist.md  02-writer.md  03-reviewer.md  04-style-editor.md
.claude/skills/content-generator/: SKILL.md
.claude/skills/quality-validator/: SKILL.md
.claude/skills/style-reference/: SKILL.md
.claude/skills/style-reference/references/: blog-올리브영-2025실적분석_20260322.md
.omc/: project-memory.json
.omc/sessions/: 0169167e-5a55-44ff-a018-b5d3a3824c63.json  af9c465b-0dc2-44cd-b76b-71cec516f365.json  b6f3a174-7835-4c37-be2c-e24442b13a15.json
.omc/state/: agent-replay-1a0dd1b7-9d98-4cc5-8e80-2191d2d753f7.jsonl  agent-replay-8b47c522-6dc6-45f0-b6fd-2497af59744b.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json
assets/brand/: voice-guide.md  writing-samples.md
assets/topics/이커머스-4분기-성적표_20260216/: input.md  metadata.json
docs/guides/: refactoring-design.md
docs/plans/: 2026-04-05-naver-plus-store-mau-design.md  2026-04-05-naver-plus-store-mau.md
src/content_pipeline/: __init__.py  asset_manager.py  cli.py  client.py  config.py  generator.py  utils.py  validator.py
src/content_pipeline/agents/: __init__.py  reviewer.py  strategist.py  style_editor.py  writer.py
src/content_pipeline/prompts/: base_system.py  blog_post.py  instagram_cardnews.py  linkedin_post.py  reels_scenario.py  threads_post.py
(+7 files in other folders)
